<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DetailHeroActivity"
    android:background="@color/bg_color">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_artikel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/toolbar_subtitle"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/logo_app" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/img_poster"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/bg_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_artikel" />

    <TextView
        android:id="@+id/tv_hero_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/hero_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_poster" />

    <TextView
        android:id="@+id/tv_judul_hero_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/hero_type"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hero_name" />

    <TextView
        android:id="@+id/tv_hero_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:text="@string/hero_type"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv_judul_hero_type"
        app:layout_constraintTop_toTopOf="@+id/tv_judul_hero_type" />

    <TextView
        android:id="@+id/tv_judul_hero_primary_attr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:text="@string/hero_primary_atribute"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv_hero_primary_attr"
        app:layout_constraintTop_toTopOf="@+id/tv_hero_primary_attr" />

    <TextView
        android:id="@+id/tv_hero_primary_attr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/hero_primary_atribute"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hero_type" />

    <TextView
        android:id="@+id/tv_hero_attack_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:text="@string/hero_attack_range"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv_judul_tv_hero_attack_range"
        app:layout_constraintTop_toTopOf="@+id/tv_judul_tv_hero_attack_range" />

    <TextView
        android:id="@+id/tv_judul_tv_hero_attack_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/hero_attack_range"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hero_primary_attr" />

    <TextView
        android:id="@+id/tv_hero_base_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:text="@string/hero_base_health"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv_judul_tv_hero_base_health"
        app:layout_constraintTop_toTopOf="@+id/tv_judul_tv_hero_base_health" />

    <TextView
        android:id="@+id/tv_judul_tv_hero_base_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/hero_base_health"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hero_attack_range" />


    <TextView
        android:id="@+id/tv_judul_tv_hero_base_mana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/hero_base_mana"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hero_base_health"/>


    <TextView
        android:id="@+id/tv_hero_base_mana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:text="@string/hero_base_mana"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv_judul_tv_hero_base_mana"
        app:layout_constraintTop_toTopOf="@+id/tv_judul_tv_hero_base_mana" />

    <TextView
        android:id="@+id/tv_hero_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:text="@string/hero_role"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tv_judul_tv_hero_role"
        app:layout_constraintTop_toTopOf="@+id/tv_judul_tv_hero_role" />

    <TextView
        android:id="@+id/tv_judul_tv_hero_role"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/hero_role"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hero_base_mana" />

</androidx.constraintlayout.widget.ConstraintLayout>